--- a/backend/templates/index.html
+++ b/backend/templates/index.html
@@ -186,6 +186,10 @@
                     <div class="icon security"><i class="fas fa-unlock"></i></div>
                     <h3>Unlock PDF</h3>
                 </div>
+                <div class="tool-card" onclick="window.location.href='/to_pdf/sign-pdf/'">
+                    <div class="icon security"><i class="fas fa-signature"></i></div>
+                    <h3>Sign PDF</h3>
+                </div>
                 <div class="tool-card" onclick="openTool('secure-sharing', 'Secure Sharing')">
                     <div class="icon security"><i class="fas fa-share-alt"></i></div>
                     <h3>Secure Sharing</h3>
