--- a/frontend/src/app/globals.css
+++ b/frontend/src/app/globals.css
@@ -263,4 +263,23 @@ body {
         -ms-overflow-style: none;
         scrollbar-width: none;
     }
+
+    /* Merge icon (blue, transparent background) */
+    .merge-icon {
+        display: inline-block;
+        width: 100%;
+        height: 100%;
+        background-color: var(--primary, #01B0F1); /* brand blue */
+        -webkit-mask-image: url('/home/merge.png');
+        -webkit-mask-repeat: no-repeat;
+        -webkit-mask-position: center;
+        -webkit-mask-size: contain;
+        mask-image: url('/home/merge.png');
+        mask-repeat: no-repeat;
+        mask-position: center;
+        mask-size: contain;
+        background-repeat: no-repeat;
+        background-position: center;
+        background-size: contain;
+    }
 }
